--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 server.port = 9090
+engine.fuelType = Petrol
+spring.profiles.active=dev
+spring.application.name=adminProject
+logging.level.org.springframework : DEBUG
